[package]
name = "nearswap"
version = "0.1.0"
authors = ["Robert Zaremba https://zaremba.ch"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_json = "*"
near-sdk = "^2.0.0"
wee_alloc = { version = "0.4.5", default-features = false, features = [] }
uint = { version = "0.8.3", default-features = false }

[dev-dependencies]
#required for integration tests (simulation)
lazy_static = "1.4.0"
log = "0.4"
env_logger = { version = "0.7.1", default-features = false }
near-crypto = { git = "https://github.com/nearprotocol/nearcore.git" }
near-primitives = { git = "https://github.com/nearprotocol/nearcore.git" }
near-vm-errors = { git = "https://github.com/nearprotocol/nearcore.git" }
near-runtime-standalone = { git = "https://github.com/nearprotocol/nearcore.git" }
