[package]
name = "nearswap"
version = "0.1.0"
authors = ["Robert Zaremba https://zaremba.ch"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_json = "*"
near-sdk = { git = "https://github.com/near/near-sdk-rs.git", rev="c926d85" } # tag="contract_cache_v0"
uint = { version = "0.9.0", default-features = false }

[dev-dependencies]
near-primitives = { git = "https://github.com/nearprotocol/nearcore.git" }
near-sdk-sim = { git = "https://github.com/near/near-sdk-rs.git", rev="c926d85" }
nep21-mintable = { path = "../other-contracts/nep-21" }
