[package]
name = "nearswap"
version = "0.1.0"
authors = ["Robert Zaremba https://zaremba.ch"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_json = "*"
near-sdk = { git = "https://github.com/near/near-sdk-rs.git", rev="9d99077" } # ver=v3.0.0-pre.3
near-contract-standards = { git = "https://github.com/near/near-sdk-rs", rev = "9d99077" }
uint = { version = "0.9.0", default-features = false }

[dev-dependencies]
near-primitives = { git = "https://github.com/nearprotocol/nearcore.git" }
near-sdk-sim = { git = "https://github.com/near/near-sdk-rs.git", rev="9d99077" }
nep21-mintable = { path = "../other-contracts/nep-21" }
