[package]
name = "nearswap"
version = "0.1.0"
authors = ["Robert Zaremba https://zaremba.ch"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_json = "*"
uint = { version = "0.9.0", default-features = false }
near-sdk = "3.1.0" # { git = "https://github.com/near/near-sdk-rs.git", rev="9d99077" } # ver=v3.0.0-pre.3
near-contract-standards = "3.1.0"

[dev-dependencies]
#near-primitives = { git = "https://github.com/nearprotocol/nearcore.git" }
near-sdk-sim = "3.1.0"
sample-token = {path = "../sample-token"}
