[package]
name = "nep21-mintable"
version = "0.1.0"
authors = ["Near Inc <hello@near.org>", "NEARswap team"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "2.0.0"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
