[package]
name = "nep21-mintable"
version = "0.1.0"
authors = ["Near Inc <hello@near.org>", "NEARswap team"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { git = "https://github.com/near/near-sdk-rs.git", tag="3.0.0" }

[dev-dependencies]
#required for integration tests (simulation)
lazy_static = "1.4.0"
log = "0.4"
env_logger = { version = "0.7.1", default-features = false }
near-primitives = { git = "https://github.com/nearprotocol/nearcore.git" }
funty = "=1.1.0"
#New version of simulation tests:
# [dev-dependencies]
near-sdk-sim = { git = "https://github.com/near/near-sdk-rs.git", tag="3.0.0" }

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
